--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,20 +23,7 @@ services:
 
   calcom:
     # Official image + custom build for your URLs/branding
-    image: calcom.docker.scarf.sh/calcom/cal.com
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        # BUILD-TIME (baked into frontend)
-        NEXT_PUBLIC_WEBAPP_URL: ${NEXT_PUBLIC_WEBAPP_URL}
-        NEXT_PUBLIC_API_V2_URL: ${NEXT_PUBLIC_API_V2_URL}
-        NEXT_PUBLIC_LICENSE_CONSENT: ${NEXT_PUBLIC_LICENSE_CONSENT}
-        CALCOM_TELEMETRY_DISABLED: ${CALCOM_TELEMETRY_DISABLED}
-        NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
-        CALENDSO_ENCRYPTION_KEY: ${CALENDSO_ENCRYPTION_KEY}
-        DATABASE_URL: ${DATABASE_URL}
-        DATABASE_DIRECT_URL: ${DATABASE_DIRECT_URL}
+    image: miguelangarano/calcom-whitelabel
     env_file: .env
     environment:
       # RUNTIME envs
